crates/nash-parse/src/snapshots/nash_parse__type___tests__type_app_nested.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nMaybe (List Int)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
    value: Type {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 6,
            },
        },
        name: "Maybe",
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 16,
                    },
                },
                value: Type {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 12,
                        },
                    },
                    name: "List",
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 13,
                                },
                                end: Position {
                                    line: 1,
                                    column: 16,
                                },
                            },
                            value: Type {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 16,
                                    },
                                },
                                name: "Int",
                                args: [],
                            },
                        },
                    ],
                },
            },
        ],
    },
}
