crates/nash-parse/src/snapshots/nash_parse__type___tests__type_app_result.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nResult String Int"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: Type {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 7,
            },
        },
        name: "Result",
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 14,
                    },
                },
                value: Type {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 14,
                        },
                    },
                    name: "String",
                    args: [],
                },
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 15,
                    },
                    end: Position {
                        line: 1,
                        column: 18,
                    },
                },
                value: Type {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 15,
                        },
                        end: Position {
                            line: 1,
                            column: 18,
                        },
                    },
                    name: "Int",
                    args: [],
                },
            },
        ],
    },
}
