crates/nash-parse/src/snapshots/nash_parse__type___tests__unit.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n()"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Unit,
}
